# notangelmario

./: .gitattributes  404.html  CNAME  Cargo.toml  MORE.md  README.md  astro.config.mjs  bun.lockb  deno.json  fresh.gen.ts  import_map.json  index.html  main.js  package-lock.json  package.json  preview.html  rumage-readme.md  style.css  tailwind.config.mjs  tsconfig.json  twind.config.ts  vercel.json
.github/: deploy.yml
.github/workflows/: deploy.yml  deployment.yml
blog/: welcome.md
components/: Button.tsx  Card.tsx  Container.tsx  Footer.tsx  Header.tsx  Links.tsx  Navbar.tsx  Projects.tsx  Wave.tsx
docs/life-changelog/: 18-8.md
islands/: Counter.tsx  MoreButton.tsx  Navbar.tsx
lib/: links.ts  projects.ts
pages/: _footer.html  _footer.md  _nav.md  art-and-music.md  index.md  programming.md  student.md  volunteering.md
pages/blog/: how-i-built-my-website.md  index.md
pages/nested/: index.md
public/: index.html
routes/: _app.tsx  index.tsx  more.tsx
routes/changelog/: [id].tsx  index.tsx
routes/wrote/: [...slug].tsx  index.tsx
source/: _footer.html  acting.md  art-and-music.md  index.md  programming.md  style.css  volunteering.md
source/blog/: am-i-prepared-to-make-a-company.md  how-i-built-my-website.md  index.md  young-entrepreneurship.md
src/: App.tsx  _footer.html  _nav.md  art-and-music.md  compiler.rs  files.rs  index.md  index.tsx  main.rs  programming.md  react-app-env.d.ts  student.md  style.css  volunteering.md
src/blog/: acting.md  index.md  student.md  (+5 more)
static/: MORE.md  global.css  theme.css
utils/: sharedUi.ts  twind.ts
(+29 files in other folders)
